force-app/main/default/objects/cgcloud__TPO_UP_Account_Category_Model__c/cgcloud__TPO_UP_Account_Category_Model__c.object-meta.xml
<CustomObject>
    <description>Informs the application about which dataset to use for feature extraction and which model to use for Uplift prediction</description>
    <label>TPO UP Account Category to Model</label>
    <nameField>
        <displayFormat>TPOUP-{0000000}</displayFormat>
        <label>TPO UP Account Category to Model</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TPO UP Account Category to Model</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>