force-app/main/default/objects/cgcloud__TPO_UP_Account_Category_Model__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Planning Account for which the Feature Extraction Dataset and Prediction Model will be used</description>
    <inlineHelpText>Planning Account for which the Feature Extraction Dataset and Prediction Model will be used</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TPO UP Account Category to Model</relationshipLabel>
    <relationshipName>TPO_UP_Account_Category_to_Model</relationshipName>
    <type>Lookup</type>
</CustomField>