force-app/main/default/objects/cgcloud__TPO_UP_Account_Category_Model__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If the record must be considered.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>