force-app/main/default/objects/cgcloud__TPO_UP_Account_Category_Model__c/fields/cgcloud__Category__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Category for which the Feature Extraction Dataset and Prediction Model will be used</description>
    <inlineHelpText>Category for which the Feature Extraction Dataset and Prediction Model will be used</inlineHelpText>
    <label>Category</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A Category Record must be selected.</errorMessage>
        <filterItems>
            <field>Product2.cgcloud__Product_Level__c</field>
            <operation>equals</operation>
            <value>Category</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>TPO UP Account Category to Model</relationshipLabel>
    <relationshipName>TPO_UP_Account_Category_to_Model</relationshipName>
    <type>Lookup</type>
</CustomField>