force-app/main/default/objects/cgcloud__TPO_UP_Account_Category_Model__c/fields/cgcloud__Dataset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Dataset__c</fullName>
    <description>Dataset API Name used for feature extraction</description>
    <inlineHelpText>Dataset API Name used for feature extraction</inlineHelpText>
    <label>Dataset</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>