force-app/main/default/objects/cgcloud__TPO_UP_Account_Category_Model__c/fields/cgcloud__Model__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Model__c</fullName>
    <description>Prediction Model Id used for Uplift Prediction</description>
    <inlineHelpText>Prediction Model Id used for Uplift Prediction</inlineHelpText>
    <label>Model</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>